--- a/LiuZUnion/pages/index.html
+++ b/LiuZUnion/pages/index.html
@@ -47,6 +47,8 @@
     <script type="text/javascript" src="angular-ueditor-master/ueditor.config.js"></script>
     <script type="text/javascript" src="angular-ueditor-master/ueditor.all.js"></script>
     <script type="text/javascript" src="angular-ueditor-master/foundation.min.js"></script>
+    <!--<script type="text/javascript" src="../Controllers/weixinpicture.js"></script>-->
+
     <!--Editor End-->
     <script src="../Controllers/StandardSolution/StandardSolutionAndExamplesCtrl.js"></script>
     <script src="../Controllers/StandardSolution/standardExamples.js"></script>
