现在是不允许自动下载图片了，ueditor。

--- a/LiuZUnion/pages/index.html
+++ b/LiuZUnion/pages/index.html
@@ -10,7 +10,7 @@
     <script src="\assets\js\jquery.validate.min.js"></script>
     <script src="Scripts/angular.min.js"></script>
     <script src="../Controllers/tm.pagination.js"></script>
-    <script type="text/javascript" src="angular-ueditor-master/dist/angular-ueditor.js"></script>
+    <script type="text/javascript" src="angular-ueditor-master/dist/angular-ueditor.js?v=1"></script>
     <script src="Scripts/angular-ui-router.js"></script>
     <script src="Scripts/d3.v3.min.js"></script>
     <!-- tree -->
@@ -44,10 +44,10 @@
     <script src="../Controllers/Article/ArticleOpeCtrl.js?v=1"></script>
 
     <!--Editor-->
-    <script type="text/javascript" src="angular-ueditor-master/ueditor.config.js"></script>
-    <script type="text/javascript" src="angular-ueditor-master/ueditor.all.js"></script>
-    <script type="text/javascript" src="angular-ueditor-master/foundation.min.js"></script>
-    <!--<script type="text/javascript" src="../Controllers/weixinpicture.js"></script>-->
+    <script type="text/javascript" src="angular-ueditor-master/ueditor.config.js?v=2"></script>
+    <script type="text/javascript" src="angular-ueditor-master/ueditor.all.js?v=2"></script>
+    <script type="text/javascript" src="angular-ueditor-master/foundation.min.js?v=2"></script>
+    <script type="text/javascript" src="../Controllers/weixinpicture.js?v=2"></script>
 
     <!--Editor End-->
     <script src="../Controllers/StandardSolution/StandardSolutionAndExamplesCtrl.js"></script>
