--- a/LiuZUnion/Mobile/index.html
+++ b/LiuZUnion/Mobile/index.html
@@ -350,7 +350,7 @@
                     </div>
                 </div>
                 <div class="tab_bd">
-                    <div class="article_list article_list_0">
+                    <div>
                         <a ng-repeat="ArticleInfo in ArticleInfoList" class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzAwNjI2ODE4Nw==&amp;mid=2650060479&amp;idx=1&amp;sn=eee17f3af3b0f6e1144cf3090752f40b&amp;scene=19#wechat_redirect">
                             <div class="cover">
                                 <img class="img js_img" src="{{ArticleInfo.FirstPicUrl}}" alt="">
@@ -360,9 +360,15 @@
                                 <p class="desc">{{ArticleInfo.Title}}</p>
                             </div>
                         </a>
-
-                       
-
+                                                <a  class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzAwNjI2ODE4Nw==&amp;mid=2650060479&amp;idx=1&amp;sn=eee17f3af3b0f6e1144cf3090752f40b&amp;scene=19#wechat_redirect">
+                            <div class="cover">
+                                <img class="img js_img" src="{{ArticleInfo.FirstPicUrl}}" alt="">
+                            </div>
+                            <div class="cont">
+                                <h2 class="title js_title">{{ArticleInfo.Title}}</h2>
+                                <p class="desc">{{ArticleInfo.Title}}</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
