--- a/LiuZUnion/Mobile/HtmlPage1.html
+++ b/LiuZUnion/Mobile/HtmlPage1.html
@@ -4,14 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
     <meta charset="utf-8" />
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/angular.min.js"></script>
     <script src="assets/js/angular-sanitize.min.js"></script>
     <script src="assets/js/angular-ui-router.js"></script>
+    <!--<script src="assets/js/ng-infinite-scroll.min.js"></script>-->
     <!--<script src='assets/ngInfiniteScroll-master/test/spec/ng-infinite-scroll.spec.js'></script>-->
-    <script src="aa.js"></script>
+    <script src="A.js?v=11"></script>
 </head>
 <body>
-    <div ng-app='myApp' ng-controller='DemoController'>
+    <div ng-controller="DemoController">
 <!--        <div infinite-scroll='loadMore()' infinite-scroll-distance='2'>
             <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
         </div>-->
