--- a/LiuZUnion/Mobile/index.html
+++ b/LiuZUnion/Mobile/index.html
@@ -351,7 +351,7 @@
                     </div>
                 </div>
                 <div class="tab_bd">
-                    <div>
+                    <div infinite-scroll='loadMore()' infinite-scroll-distance='2'>
                         <a ng-repeat="ArticleInfo in ArticleInfoList" class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzAwNjI2ODE4Nw==&amp;mid=2650060479&amp;idx=1&amp;sn=eee17f3af3b0f6e1144cf3090752f40b&amp;scene=19#wechat_redirect">
                             <div class="cover">
                                 <img class="img js_img" src="{{ArticleInfo.FirstPicUrl}}" alt="">
@@ -361,9 +361,9 @@
                                 <p class="desc">{{ArticleInfo.Title}}</p>
                             </div>
                         </a>
-                        <div infinite-scroll='loadMore()' infinite-scroll-distance='2'>
+<!--                        <div infinite-scroll='loadMore()' infinite-scroll-distance='2'>
                             <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
