--- a/LiuZUnion/Mobile/index.html
+++ b/LiuZUnion/Mobile/index.html
@@ -77,7 +77,7 @@
     <script nonce="" type="text/javascript">
         window.no_moon_ls = 0;
     </script>
-    <title>深圳工会</title>
+    <title>柳州市直机关工会</title>
 
     <link onerror="wx_loaderror(this)" rel="stylesheet" href="./sazh_files/index23b0e8.css">
 
@@ -319,7 +319,7 @@
                     <div class="item js_post" style="width: 1269px; height: 180px;">
                         <a href="http://mp.weixin.qq.com/s?__biz=MzAwNjI2ODE4Nw==&amp;mid=205221887&amp;idx=1&amp;sn=ff37c4aae694e591558afb3cc6077b6d&amp;scene=19#wechat_redirect">
                             <div class="img js_img" style="background-image: url(&#39;http://mmbiz.qpic.cn/mmbiz/QiblmlVAO6IO1S7DZtsMZ9Il0iafeRjjiaC34dskQPNkDjUZIbwd8WLao0OCeMfmhXGGvKksH7SHHx9PgddVwNClg/640&#39;);"></div>
-                            <p class="desc js_title">一张图读懂深圳工会</p>
+                            <p class="desc js_title">柳州市直机关工会</p>
                         </a>
                     </div>
 
@@ -423,13 +423,13 @@
         var cgiData = {
             biz: 'MzAwNjI2ODE4Nw==',
             hid: '1',
-            pagename: '深圳工会',
+            pagename: '柳州市直机关工会',
             comboList: {
                 'js': '/hp/hp_1_7.js,/hp/hp_2_10.js',
                 'css.js': '/hp/hp_1_7.css.js,/hp/hp_2_10.css.js'
             },
             biz_info: {
-                nickname: "深圳工会"
+                nickname: "柳州市直机关工会"
             }
         };
     </script>
