--- a/LiuZUnion/pages/Article/ArticleOperate.html
+++ b/LiuZUnion/pages/Article/ArticleOperate.html
@@ -28,6 +28,16 @@
                 </div>
 
                 <div class="form-group">
+                    <label class="col-sm-2 control-label no-padding-right" for="form-field-1">热门文章</label>
+
+                    <div class="col-sm-10">
+                        <div class="clearfix">
+                            <input type="checkbox" data-ng-model="data.IsTopArticle" ng-true-value="yes" ng-false-value="no" value="1" />
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <label class="col-sm-2 control-label no-padding-right" for="form-field-1">内容</label>
 
                     <div class="col-sm-10">
