栏目多选搞定-operate页面。

--- a/LiuZUnion/pages/Article/ArticleList.html
+++ b/LiuZUnion/pages/Article/ArticleList.html
@@ -48,7 +48,7 @@
                                     <td>
                                         <a href="" ng-click="Update(Article.ID)">{{Article.Title}}</a>
                                     </td>
-                                    <td>{{Article.DicID}}</td>
+                                    <td>{{Article.DicNames}}</td>
                                     <td>{{Article.CreateDateTime}}</td>
 
 
