--- a/LiuZUnion/pages/index.html
+++ b/LiuZUnion/pages/index.html
@@ -40,6 +40,7 @@
     <script src="../Controllers/DictionaryTree/DictionaryTreeCtrl.js"></script>
     <script src="../Controllers/DictionaryTree/DictionaryBigTreeCtrl.js?v=1"></script>
     <script src="../Controllers/DictionaryTree/DicInfoOpeCtrl.js?v=1"></script>
+    <script src="../Controllers/DictionaryTree/DictionaryTreeSelectCtrl.js?v=1"></script>
     <script src="../Controllers/Article/Article.js?v=1"></script>
     <script src="../Controllers/Article/ArticleOpeCtrl.js?v=1"></script>
 
