--- a/LiuZUnion/pages/Article/ArticleOperate.html
+++ b/LiuZUnion/pages/Article/ArticleOperate.html
@@ -11,12 +11,11 @@
                     <label class="col-sm-2 control-label no-padding-right" for="form-field-1">所属栏目</label>
 
                     <div class="col-sm-10">
-                        <div class="clearfix">
-                            <input type="text" id="DicID" name="DicID" class="col-xs-10 col-sm-5" data-ng-model="data.DicID" />
+                        <div class="clearfix" >
+                            <input type="text" id="citySel" name="citySel" class="col-xs-10 col-sm-5" data-ng-model="data.DicNames" ng-click="showMenu()" />
                         </div>
                     </div>
                 </div>
-
                 <div class="form-group">
                     <label class="col-sm-2 control-label no-padding-right" for="form-field-1">标题</label>
 
@@ -83,6 +82,41 @@
         <!-- /.col -->
     </div>
     <!-- /.row -->
+
+    <!--弹出栏目树形选择窗口-->
+    <div class="row">
+        <div id="modal-table2" class="modal fade" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header no-padding">
+                        <div class="table-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                                <span class="white">&times;</span>
+                            </button>
+                            栏目选择
+                        </div>
+                    </div>
+
+                    <div class="widget-body">
+                        <div id="menuContent" class="menuContent" ng-controller="DictionaryTreeSelectCtrl">
+                            <ul id="treeDemo" class="ztree" style="margin-top: 0; "></ul>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer no-margin-top">
+                        <button class="btn btn-sm btn-danger pull-left" data-dismiss="modal">
+                            <i class="icon-remove"></i>
+                            关闭
+                        </button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal-dialog -->
+        </div>
+
+    </div>
+    <!--弹出栏目树形选择窗口  end-->
 </div>
 
 
