--- a/LiuZUnion/pages/Article/ArticleList.html
+++ b/LiuZUnion/pages/Article/ArticleList.html
@@ -7,10 +7,10 @@
                     <h3 class="header smaller lighter blue">文章管理</h3>
                     <p>
                         <label style="display: inline-block; width: 60px; text-align: right;">所属分类</label>
-                        <input type="text" ng-model="data.DicID" />
+                        <input type="text" id="citySel" name="citySel"style="width:500px" data-ng-model="data.DicNames" ng-click="showMenu()" />
 
                         <label style="display: inline-block; width: 60px; text-align: right;">内容</label>
-                        <input type="text" ng-model="data.Title" />
+                        <input type="text" ng-model="data.Title" style="width:500px" />
                     </p>
 
                     <p>
@@ -79,6 +79,40 @@
                 </div>
             </div>
             <!-- PAGE CONTENT ENDS -->
+    <!--弹出栏目树形选择窗口-->
+    <div class="row">
+        <div id="modal-table2" class="modal fade" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header no-padding">
+                        <div class="table-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                                <span class="white">&times;</span>
+                            </button>
+                            栏目选择
+                        </div>
+                    </div>
+
+                    <div class="widget-body">
+                        <div id="menuContent" class="menuContent" ng-controller="DictionaryTreeSelectCtrl">
+                            <ul id="treeDemo" class="ztree" style="margin-top: 0; "></ul>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer no-margin-top">
+                        <button class="btn btn-sm btn-danger pull-left" data-dismiss="modal">
+                            <i class="icon-remove"></i>
+                            关闭
+                        </button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal-dialog -->
+        </div>
+
+    </div>
+    <!--弹出栏目树形选择窗口  end-->
         </div>
         <!-- /.col -->
     </div>
