--- a/LiuZUnion/pages/index.html
+++ b/LiuZUnion/pages/index.html
@@ -6,8 +6,8 @@
     <meta name="keywords" content="Bootstrap模版,Bootstrap模版下载,Bootstrap教程,Bootstrap中文" />
     <meta name="description" content="站长素材提供Bootstrap模版,Bootstrap教程,Bootstrap中文翻译等相关Bootstrap插件下载" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="\assets\js\jquery-2.0.3.min.js"></script>
-    <script src="\assets\js\jquery.validate.min.js"></script>
+    <script src="/assets/js/jquery-2.0.3.min.js"></script>
+    <script src="/assets/js/jquery.validate.min.js"></script>
     <script src="Scripts/angular.min.js"></script>
     <script src="../Controllers/tm.pagination.js"></script>
     <script type="text/javascript" src="angular-ueditor-master/dist/angular-ueditor.js?v=1"></script>
