--- a/LiuZUnion/pages/index.html
+++ b/LiuZUnion/pages/index.html
@@ -6,53 +6,53 @@
     <meta name="keywords" content="Bootstrap模版,Bootstrap模版下载,Bootstrap教程,Bootstrap中文" />
     <meta name="description" content="站长素材提供Bootstrap模版,Bootstrap教程,Bootstrap中文翻译等相关Bootstrap插件下载" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/assets/js/jquery-2.0.3.min.js?v=3"></script>
-    <script src="/assets/js/jquery.validate.min.js?v=3"></script>
-    <script src="Scripts/angular.min.js?v=3"></script>
-    <script src="../Controllers/tm.pagination.js?v=3"></script>
-    <script type="text/javascript" src="angular-ueditor-master/dist/angular-ueditor.js?v=3"></script>
-    <script src="Scripts/angular-ui-router.js?v=3"></script>
-    <script src="Scripts/d3.v3.min.js?v=3"></script>
+    <script src="/assets/js/jquery-2.0.3.min.js?v=5"></script>
+    <script src="/assets/js/jquery.validate.min.js?v=5"></script>
+    <script src="Scripts/angular.min.js?v=5"></script>
+    <script src="../Controllers/tm.pagination.js?v=5"></script>
+    <script type="text/javascript" src="angular-ueditor-master/dist/angular-ueditor.js?v=5"></script>
+    <script src="Scripts/angular-ui-router.js?v=5"></script>
+    <script src="Scripts/d3.v3.min.js?v=5"></script>
     <!-- tree -->
-    <script src="/pages/FunctionAnalyse/t/ui-bootstrap-tpls.js?v=3"></script>
-    <script src="/pages/FunctionAnalyse/t/main.js?v=3"></script>
-    <script src="/pages/FunctionAnalyse/t/handleCtrl.js?v=3"></script>
-    <script src="/pages/FunctionAnalyse/t/nodeCtrl.js?v=3"></script>
-    <script src="/pages/FunctionAnalyse/t/nodesCtrl.js?v=3"></script>
-    <script src="/pages/FunctionAnalyse/t/treeCtrl.js?v=3"></script>
-    <script src="/pages/FunctionAnalyse/t/uiTree.js?v=3"></script>
-    <script src="/pages/FunctionAnalyse/t/uiTreeHandle.js?v=3"></script>
-    <script src="/pages/FunctionAnalyse/t/uiTreeNode.js?v=3"></script>
-    <script src="/pages/FunctionAnalyse/t/uiTreeNodes.js?v=3"></script>
-    <script src="/pages/FunctionAnalyse/t/helper.js?v=3"></script>
+    <script src="/pages/FunctionAnalyse/t/ui-bootstrap-tpls.js?v=5"></script>
+    <script src="/pages/FunctionAnalyse/t/main.js?v=5"></script>
+    <script src="/pages/FunctionAnalyse/t/handleCtrl.js?v=5"></script>
+    <script src="/pages/FunctionAnalyse/t/nodeCtrl.js?v=5"></script>
+    <script src="/pages/FunctionAnalyse/t/nodesCtrl.js?v=5"></script>
+    <script src="/pages/FunctionAnalyse/t/treeCtrl.js?v=5"></script>
+    <script src="/pages/FunctionAnalyse/t/uiTree.js?v=5"></script>
+    <script src="/pages/FunctionAnalyse/t/uiTreeHandle.js?v=5"></script>
+    <script src="/pages/FunctionAnalyse/t/uiTreeNode.js?v=5"></script>
+    <script src="/pages/FunctionAnalyse/t/uiTreeNodes.js?v=5"></script>
+    <script src="/pages/FunctionAnalyse/t/helper.js?v=5"></script>
     <!-- tree end -->
 
-    <script src="../Controllers/App.js?v=3"></script>
-    <script src="Angularjs/constant/constant.js?v=3"></script>
-    <script src="../Controllers/MasterCtrl.js?v=3"></script>
-    <script src="../Controllers/tb.js?v=3"></script>
-    <script src="../Controllers/DataPicker.js?v=3"></script>
-    <script src="../Controllers/Tree.js?v=3"></script>
-    <script src="../Controllers/Project.js?v=3"></script>
-    <script src="../Controllers/ProjectOpeCtrl.js?v=3"></script>
-    <script src="../Controllers/User.js?v=3"></script>
-    <script src="../Controllers/UserOpeCtrl.js?v=3"></script>
-    <script src="../Controllers/DictionaryTree/DictionaryTreeCtrl.js?v=3"></script>
-    <script src="../Controllers/DictionaryTree/DictionaryBigTreeCtrl.js?v=3"></script>
-    <script src="../Controllers/DictionaryTree/DicInfoOpeCtrl.js?v=3"></script>
-    <script src="../Controllers/DictionaryTree/DictionaryTreeSelectCtrl.js?v=3"></script>
-    <script src="../Controllers/Article/Article.js?v=3"></script>
-    <script src="../Controllers/Article/ArticleOpeCtrl.js?v=3"></script>
+    <script src="../Controllers/App.js?v=5"></script>
+    <script src="Angularjs/constant/constant.js?v=5"></script>
+    <script src="../Controllers/MasterCtrl.js?v=5"></script>
+    <script src="../Controllers/tb.js?v=5"></script>
+    <script src="../Controllers/DataPicker.js?v=5"></script>
+    <script src="../Controllers/Tree.js?v=5"></script>
+    <script src="../Controllers/Project.js?v=5"></script>
+    <script src="../Controllers/ProjectOpeCtrl.js?v=5"></script>
+    <script src="../Controllers/User.js?v=5"></script>
+    <script src="../Controllers/UserOpeCtrl.js?v=5"></script>
+    <script src="../Controllers/DictionaryTree/DictionaryTreeCtrl.js?v=5"></script>
+    <script src="../Controllers/DictionaryTree/DictionaryBigTreeCtrl.js?v=5"></script>
+    <script src="../Controllers/DictionaryTree/DicInfoOpeCtrl.js?v=5"></script>
+    <script src="../Controllers/DictionaryTree/DictionaryTreeSelectCtrl.js?v=5"></script>
+    <script src="../Controllers/Article/Article.js?v=5"></script>
+    <script src="../Controllers/Article/ArticleOpeCtrl.js?v=5"></script>
 
     <!--Editor-->
-    <script type="text/javascript" src="angular-ueditor-master/ueditor.config.js?v=3"></script>
-    <script type="text/javascript" src="angular-ueditor-master/ueditor.all.js?v=3"></script>
-    <script type="text/javascript" src="angular-ueditor-master/foundation.min.js?v=3"></script>
-    <script type="text/javascript" src="../Controllers/weixinpicture.js?v=3"></script>
+    <script type="text/javascript" src="angular-ueditor-master/ueditor.config.js?v=5"></script>
+    <script type="text/javascript" src="angular-ueditor-master/ueditor.all.js?v=5"></script>
+    <script type="text/javascript" src="angular-ueditor-master/foundation.min.js?v=5"></script>
+    <script type="text/javascript" src="../Controllers/weixinpicture.js?v=5"></script>
 
     <!--Editor End-->
-    <script src="../Controllers/StandardSolution/StandardSolutionAndExamplesCtrl.js?v=3"></script>
-    <script src="../Controllers/StandardSolution/standardExamples.js?v=3"></script>
+    <script src="../Controllers/StandardSolution/StandardSolutionAndExamplesCtrl.js?v=5"></script>
+    <script src="../Controllers/StandardSolution/standardExamples.js?v=5"></script>
 
     <!--<link href="/assets/css/bootstrap.min.css" rel="stylesheet" />-->
     <!--弹出窗口跑偏了，所以注释掉了。-->
@@ -205,13 +205,13 @@
 
     <!-- ace settings handler -->
 
-    <script src="/assets/js/ace-extra.min.js?v=3"></script>
+    <script src="/assets/js/ace-extra.min.js?v=5"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 
     <!--[if lt IE 9]>
-		<script src="/assets/js/html5shiv.js?v=3"></script>
-		<script src="/assets/js/respond.min.js?v=3"></script>
+		<script src="/assets/js/html5shiv.js?v=5"></script>
+		<script src="/assets/js/respond.min.js?v=5"></script>
 		<![endif]-->
 </head>
 
@@ -304,26 +304,26 @@
                     </li>
 
                     <li>
-                        <a href="#" ui-sref="QuestionDescriptionAdd">
+                        <a href="#" ui-sref="">
                             <i class="icon-exclamation-sign"></i>
                             <span class="menu-text">机关职工管理 </span>
                         </a>
                     </li>
 
                     <li>
-                        <a href="#" ui-sref="QuestionAnalyseAdd">
+                        <a href="#" ui-sref="">
                             <i class="icon-lightbulb"></i>
                             <span class="menu-text">商家管理 </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#" ui-sref="FunctionAnalyseAdd">
+                        <a href="#" ui-sref="">
                             <i class="icon-eye-open"></i>
                             <span class="menu-text">留言管理 </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#" ui-sref="CauseEffectAdd">
+                        <a href="#" ui-sref="">
                             <i class="icon-beaker"></i>
                             <span class="menu-text">智能提醒 </span>
                         </a>
@@ -418,7 +418,7 @@
     <!-- <![endif]-->
 
     <!--[if IE]>
-<script src="\assets\js\jquery-1.10.2.min.js?v=3"></script>
+<script src="\assets\js\jquery-1.10.2.min.js?v=5"></script>
 <![endif]-->
 
     <!--[if !IE]> -->
@@ -438,48 +438,48 @@
     <script type="text/javascript">
         if ("ontouchend" in document) document.write("<script src='/assets/js/jquery.mobile.custom.min.js'>" + "<" + "/script>");
     </script>
-    <script src="/assets/js/bootstrap.min.js?v=3"></script>
-    <script src="/assets/js/typeahead-bs2.min.js?v=3"></script>
+    <script src="/assets/js/bootstrap.min.js?v=5"></script>
+    <script src="/assets/js/typeahead-bs2.min.js?v=5"></script>
 
     <!-- page specific plugin scripts -->
-    <script src="/assets/js/jquery.nestable.min.js?v=3"></script>
+    <script src="/assets/js/jquery.nestable.min.js?v=5"></script>
 
-    <script src="/assets/js/jquery.dataTables.min.js?v=3"></script>
-    <script src="/assets/js/jquery.dataTables.bootstrap.js?v=3"></script>
+    <script src="/assets/js/jquery.dataTables.min.js?v=5"></script>
+    <script src="/assets/js/jquery.dataTables.bootstrap.js?v=5"></script>
 
 
     <!--fuelux.tree-->
-    <!--<script src="/assets/js/fuelux/data/fuelux.tree-sampledata.js?v=3"></script>-->
-    <script src="/assets/js/fuelux/fuelux.tree.min.js?v=3"></script>
+    <!--<script src="/assets/js/fuelux/data/fuelux.tree-sampledata.js?v=5"></script>-->
+    <script src="/assets/js/fuelux/fuelux.tree.min.js?v=5"></script>
 
     <!--zTree_v3-->
-    <script type="text/javascript" src="/pages/zTree_v3/js/jquery.ztree.core.js?v=3"></script>
-    <script type="text/javascript" src="/pages/zTree_v3/js/jquery.ztree.excheck.js?v=3"></script>
-    <script type="text/javascript" src="/pages/zTree_v3/js/jquery.ztree.exedit.js?v=3"></script>
-    <script type="text/javascript" src="/pages/zTree_v3/js/jquery.ztree.exhide.js?v=3"></script>
+    <script type="text/javascript" src="/pages/zTree_v3/js/jquery.ztree.core.js?v=5"></script>
+    <script type="text/javascript" src="/pages/zTree_v3/js/jquery.ztree.excheck.js?v=5"></script>
+    <script type="text/javascript" src="/pages/zTree_v3/js/jquery.ztree.exedit.js?v=5"></script>
+    <script type="text/javascript" src="/pages/zTree_v3/js/jquery.ztree.exhide.js?v=5"></script>
 
     <!-- ace scripts -->
 
-    <script src="/assets/js/ace-elements.min.js?v=3"></script>
-    <script src="/assets/js/ace.min.js?v=3"></script>
+    <script src="/assets/js/ace-elements.min.js?v=5"></script>
+    <script src="/assets/js/ace.min.js?v=5"></script>
 
-    <script src="/assets/js/bootbox.min.js?v=3"></script>
+    <script src="/assets/js/bootbox.min.js?v=5"></script>
 
-    <script src="/assets/js/date-time/bootstrap-datepicker.min.js?v=3"></script>
+    <script src="/assets/js/date-time/bootstrap-datepicker.min.js?v=5"></script>
 
     <!-- inline scripts related to this page -->
 
-    <script src="../Controllers/DrawUtil.js?v=3"></script>
+    <script src="../Controllers/DrawUtil.js?v=5"></script>
 
     <!--echart-->
-    <script type="text/javascript" src="echarts/echarts.min.js?v=3"></script>
-    <script type="text/javascript" src="echarts/echarts-gl.min.js?v=3"></script>
-    <script type="text/javascript" src="echarts/ecStat.min.js?v=3"></script>
-    <script type="text/javascript" src="echarts/dataTool.min.js?v=3"></script>
-    <script type="text/javascript" src="echarts/china.js?v=3"></script>
-    <script type="text/javascript" src="echarts/world.js?v=3"></script>
-    <script type="text/javascript" src="echarts/bmap.min.js?v=3"></script>
-    <script type="text/javascript" src="echarts/simplex.js?v=3"></script>
+    <script type="text/javascript" src="echarts/echarts.min.js?v=5"></script>
+    <script type="text/javascript" src="echarts/echarts-gl.min.js?v=5"></script>
+    <script type="text/javascript" src="echarts/ecStat.min.js?v=5"></script>
+    <script type="text/javascript" src="echarts/dataTool.min.js?v=5"></script>
+    <script type="text/javascript" src="echarts/china.js?v=5"></script>
+    <script type="text/javascript" src="echarts/world.js?v=5"></script>
+    <script type="text/javascript" src="echarts/bmap.min.js?v=5"></script>
+    <script type="text/javascript" src="echarts/simplex.js?v=5"></script>
     <!--echart end-->
 </body>
 </html>
