--- a/LiuZUnion/Mobile/DetailInfo.html
+++ b/LiuZUnion/Mobile/DetailInfo.html
@@ -19,7 +19,7 @@
 
                 <div class="rich_media_content " lang="=&quot;en&quot;" id="js_content">
 
-                    <p ng-bind-html="data.HtmlNote | to_trusted"></p>
+                    <p ng-bind-html="data.Note | to_trusted"></p>
 
                 </div>
 
