--- a/LiuZUnion/Mobile/index.html
+++ b/LiuZUnion/Mobile/index.html
@@ -80,7 +80,7 @@
     <script nonce="" type="text/javascript">
         window.no_moon_ls = 0;
     </script>
-    <title>人人发布</title>
+    <title>柳州市直机关工会</title>
 
     <link onerror="wx_loaderror(this)" rel="stylesheet" href="./sazh_files/index23b0e8.css">
     <link rel="stylesheet" href="dist/css/swiper.min.css">
@@ -1362,7 +1362,7 @@
             <div class="tab js_plugin" id="namespace_1" data-pid="2">
                 <div class="tab_hd" ng-controller="IndexCtrl">
                     <div class="tab_hd_inner">
-                        <div type="index" data-index="$index" ng-repeat="item in ColumnInfoList" ng-click="goto(item.Name)" class="item {{item.ActiveStatus}}">{{item.Name}}</div>
+                        <div type="index" data-index="$index" ng-repeat="item in ColumnInfoList" ng-click="goto(item.id)" class="item {{item.ActiveStatus}}">{{item.name}}</div>
                     </div>
                 </div>
                 <div data-ui-view=""></div>
