--- a/LiuZUnion/Mobile/list.html
+++ b/LiuZUnion/Mobile/list.html
@@ -6,7 +6,7 @@
             </div>
             <div class="cont">
                 <h2 class="title js_title">{{ArticleInfo.Title}}</h2>
-                <p class="desc">{{ArticleInfo.Title}}</p>
+                <p class="desc">{{ArticleInfo.PureWordsNote}}</p>
             </div>
         </a>
     </div>
