--- a/LiuZUnion/pages/Article/ArticleOperate.html
+++ b/LiuZUnion/pages/Article/ArticleOperate.html
@@ -27,11 +27,11 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label no-padding-right" for="form-field-1">热门文章</label>
+                    <label class="col-sm-2 control-label no-padding-right" for="form-field-1">大图显示</label>
 
                     <div class="col-sm-10">
                         <div class="clearfix">
-                            <input type="checkbox" data-ng-model="data.IsTopArticle" ng-true-value="yes" ng-false-value="no" value="1" />
+                            <input type="checkbox" data-ng-model="data.BigPictureDisplay" ng-true-value="True" ng-false-value="False" value="1" />
                         </div>
                     </div>
                 </div>
