历史数据 品牌大图

--- a/LiuZUnion/Mobile/index.html
+++ b/LiuZUnion/Mobile/index.html
@@ -13,12 +13,12 @@
 
     <script src="assets/js/ng-infinite-scroll.min.js"></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-    <script src="Controllers/App.js?v=8"></script>
-    <script src="Controllers/constant.js?v=8"></script>
-    <script src="Controllers/IndexCtrl.js?v=8"></script>
-    <script src="Controllers/ListCtrl.js?v=8"></script>
-    <script src="Controllers/BigPictureCtrl.js?v=8"></script>
-    <script src="Controllers/DetailCtrl.js?v=8"></script>
+    <script src="Controllers/App.js?v=9"></script>
+    <script src="Controllers/constant.js?v=9"></script>
+    <script src="Controllers/IndexCtrl.js?v=9"></script>
+    <script src="Controllers/ListCtrl.js?v=9"></script>
+    <script src="Controllers/BigPictureCtrl.js?v=9"></script>
+    <script src="Controllers/DetailCtrl.js?v=9"></script>
     <script nonce="" type="text/javascript">
         window.logs = {
             pagetime: {}
@@ -84,6 +84,7 @@
 
     <link onerror="wx_loaderror(this)" rel="stylesheet" href="./sazh_files/index23b0e8.css">
     <link rel="stylesheet" href="dist/css/swiper.min.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Demo styles -->
     <style>
         .swiper-container {
@@ -1369,7 +1370,7 @@
             </div>
         </div>
     </div>
-
+    
 
     <script nonce="">
         var __DEBUGINFO = {
