品牌内容能读取出来了。

--- a/LiuZUnion/Mobile/index.html
+++ b/LiuZUnion/Mobile/index.html
@@ -19,6 +19,7 @@
     <script src="Controllers/ListCtrl.js?v=9"></script>
     <script src="Controllers/BigPictureCtrl.js?v=9"></script>
     <script src="Controllers/DetailCtrl.js?v=9"></script>
+    <script src="Controllers/BrandListCtrl.js?v=9"></script>
     <script nonce="" type="text/javascript">
         window.logs = {
             pagetime: {}
