--- a/LiuZUnion/Mobile/BrandList.html
+++ b/LiuZUnion/Mobile/BrandList.html
@@ -1,23 +1,12 @@
 ﻿<!-- Start:main -->
-    <div style="background:#f5f5f5;">        
+    <div style="background:#f5f5f5;" ng-controller="BrankListCtrl">       
         <div class="main mainIndex" id="pageone" style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
             <!-- Start:news -->
-            <div class="news">
+            <div class="news" ng-repeat="ColumnInfo in ColumnInfoList">
                 <div class="news-focus">
                     <!--begin 6870318-0-1-->
-                    <div class="news-photo"><a href="http://www.sznews.com/mb/content/2018-07/05/content_19468756.htm?cxid=gonghui&amp;token=1530818013288" target="_blank">
-                        <img src="1.jpg" border="0" width="557px" height="313px"></a></div>
-                    <!--end 6870318-0-1-->
-                </div>
-            </div>
-            <!-- End:news -->
-
-            <!-- Start:news -->
-            <div class="news">
-                <div class="news-focus">
-                    <!--begin 6870318-0-1-->
-                    <div class="news-photo"><a href="http://www.sznews.com/mb/content/2018-07/05/content_19468756.htm?cxid=gonghui&amp;token=1530818013288" target="_blank">
-                        <img src="1.jpg" border="0" width="557px" height="313px"></a></div>
+                    <div class="news-photo"><a ng-click="ShowColumn(ColumnInfo.ID)" target="_blank">
+                        <img src="{{ColumnInfo.CoverPicUrl}}" border="0" width="557px" height="313px"></a></div>
                     <!--end 6870318-0-1-->
                 </div>
             </div>
